mkdocs-material-9.2.3 (2023-08-22)

  * Fixed blog plugin rendering wrongly with markdown.extensions.toc
  * Fixed blog plugin entrypoint generation

mkdocs-material-9.2.2 (2023-08-22)

  * Fixed #5880: Blog plugin failing when building a standalone blog
  * Fixed #5881: Blog plugin not compatible with Python < 3.10

mkdocs-material-9.2.1 (2023-08-21)

  * Fixed #5879: Blog plugin failing when building a standalone blog
  * Fixed error in blog plugin when using draft tagging on future date
  * Fixed error in blog plugin when toc extension is not enabled

mkdocs-material-9.2.0+insiders-4.39.1 (2023-08-21)

  * Fixed git diff in tags plugin after merging back 9.2.0 changes

mkdocs-material-9.2.0 (2023-08-21)

  Additions and improvements

  * Added blogging support via built-in blog plugin
  * Added support for Chinese language segmentaiton in search plugin
  * Added support for adding custom dates to blog posts
  * Added support for paginating archive and category pages
  * Added support for annotations (outside of code blocks)
  * Added support for navigation icons
  * Added support for navigation pruning
  * Added support for navigation status
  * Added support for customizing site icons
  * Added support for customizing (code) annotation icons
  * Added focus outline to admonitions and details
  * Added prompt for bug report name to info plugin
  * Added Luxembourgish translations
  * Improved rendering of (code) annotation markers
  * Improved print styles for (code) annotations
  * Improved customizability of navigation tabs
  * Improved interop of plugins with external tools like mike
  * Improved interop of blog plugin with awesome pages plugin
  * Improved header partial by moving buttons into separate partials
  * Improved clarity of site_url warning in social plugin
  * Improved blog plugin to automatically setup directory structure
  * Switched info plugin to importlib to mitigate deprecations