@@ -1,3 +1,8 @@
+mkdocs-material-9.x.x (unreleased)
+
+  * Updated Afrikaans translations
+  * Removed lxml dependency - not necessary after blog plugin rewrite
+
 mkdocs-material-9.2.3 (2023-08-22)
 
   * Fixed blog plugin rendering wrongly with markdown.extensions.toc
